--- a/src/ui/styles/colors.scss
+++ b/src/ui/styles/colors.scss
@@ -62,6 +62,8 @@
     #a8c55f 123.53%,
     #b9cf7c 165.71%
   );
+
+  --black: #000;
 }
 
 .ion-color-light-grey {
